Updated contact phones

--- a/Web/AltechWebSite/Views/Home/Stand.cshtml
+++ b/Web/AltechWebSite/Views/Home/Stand.cshtml
@@ -77,7 +77,7 @@
         </a>
     </p>
     <p>
-        Сроки поставки и условия предоставления стендов оговариваются индивидуально, звонитие <address><abbr title="Телефон">&#9742</abbr>&nbsp;+7&nbsp;926&nbsp;729-34-99&nbsp;,&nbsp;+7&nbsp;910&nbsp;911-38-77</address>
+        Сроки поставки и условия предоставления стендов оговариваются индивидуально, звонитие <address><abbr title="Телефон">&#9742</abbr>&nbsp;+7&nbsp;910&nbsp;911-38-77</address>
     </p>
 
 </div>
