--- a/Web/AltechWebSite/Views/Shared/_Layout.cshtml
+++ b/Web/AltechWebSite/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             @Html.ActionLink("АЛТЕХ Хозтовары", "Main", "Catalog", null, null)
         </div>
         <div class="navbar-contacts">
-            <abbr title="Телефон">&#9743</abbr>&nbsp;+7&nbsp;926&nbsp;729-34-99&nbsp;,&nbsp;+7&nbsp;910&nbsp;911-38-77
+            <abbr title="Телефон">&#9743</abbr>&nbsp;+7&nbsp;910&nbsp;911-38-77
             <br />
             <abbr title="Эл. почта">@@</abbr>&nbsp;AlexTechnologies@gmail.com
         </div>
