--- a/Web/AltechWebSite/Views/Home/Contacts.cshtml
+++ b/Web/AltechWebSite/Views/Home/Contacts.cshtml
@@ -31,21 +31,21 @@
     <address>
         <strong>Оптово-строительный рынок в Митино</strong>
         <br />
-        Москва,&nbsp;ул. Дубравная 50
+        Москва,&nbsp;1-й Митинский переулок, д. 15
         <br />
         <abbr title="Телефон">&#9742</abbr>&nbsp;+7&nbsp;910&nbsp;911-38-77
         <br />
         <abbr title="Эл. почта">@@</abbr>&nbsp;<a href="mailto:alextechnologies@gmail.com">AlexTechnologies@gmail.com</a>
     </address>
     <p>
-        Рынок работает только по <b>средам</b> с 7:00 до 18:00. Если планируете приехать в другой день предварительно позвоните.
+        Рынок работает только по <b>вторникам</b> с 20:00 до 02:00. Если планируете приехать в другой день предварительно позвоните.
     </p>
     <h3>Схема проезда</h3>
     <p>
-        <a href="https://maps.yandex.ru/-/CVw85BIR">
+        <a href="https://yandex.ru/maps/-/CBFlvIVZHA">
             «Митинский оптово-строительный рынок» на Яндекс.Картах
             <br />
-            <img src="~/Images/Map/Map.jpg" alt="Схема проезда" />
+            <img src="~/Images/Map/map2.jpg" alt="Схема проезда" />
         </a>
     </p>
 </div>
