Added two features - calculation order profits and cashless payment fee calculation. Web site updated with information about cashless payment fee.

--- a/Web/AltechWebSite/Content/altech.css
+++ b/Web/AltechWebSite/Content/altech.css
@@ -122,10 +122,6 @@
     float: left;
 }
 
-#attention-icon {
-    float: left;
-}
-
 #notification-close {
     float: left;
 }
@@ -135,8 +131,17 @@
     margin-left: 20px;
 }
 
+.attention {
+    margin-top: 10px;
+    clear: both;
+}
+
+#attention-icon {
+    float: left;
+}
+
 #attention-message {
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 .info-message {
