--- a/Web/AltechWebSite/Views/Shared/Discounts.cshtml
+++ b/Web/AltechWebSite/Views/Shared/Discounts.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 
-<div>
+<div class="attention">
     <img id="attention-icon" src="~/Images/attention.png">
     <div id="attention-message">Цены:&nbsp;<b>@ViewBag.Discounts</b>&nbsp;<span class="rouble">e</span></div>
 </div>
