--- a/Web/AltechWebSite/Views/Catalog/Main.cshtml
+++ b/Web/AltechWebSite/Views/Catalog/Main.cshtml
@@ -317,6 +317,10 @@
             }
             else
             {
+                Html.RenderPartial("CashlessPayment",
+                    new ViewDataDictionary {
+                        { "CashlessPayment", null }});
+
                 Html.RenderPartial("Discounts",
                     new ViewDataDictionary {
                         { "Discounts", ViewBag.Discounts }});
