--- a/Web/AltechWebSite/Views/Order/Main.cshtml
+++ b/Web/AltechWebSite/Views/Order/Main.cshtml
@@ -18,8 +18,8 @@
         if ('@ViewBag.SearchText' != '')
             $('#search-field').val('@ViewBag.SearchText');
 
-        if ('@ViewBag.OrderId' == '0' || '@ViewBag.Sum' == '0') 
-            $('#order-info').attr('style', 'display: none');
+        if ('@ViewBag.OrderId' > '0' && '@ViewBag.Sum' > '0') 
+            $('#order-info').attr('style', 'display: block');
 
         // Проверка доступности cookie в настройках браузера
         var cookieEnabled = (navigator.cookieEnabled) ? true : false
@@ -92,7 +92,7 @@
 
 <h2>Заказ</h2>
 
-<div id="order-info">
+<div id="order-info" style="display: none;">
     <h3>Заказ №@ViewBag.OrderId</h3>
     <div>
         <strong>
@@ -144,6 +144,10 @@
             }
             else
             {
+                Html.RenderPartial("CashlessPayment",
+                    new ViewDataDictionary {
+                        { "CashlessPayment", null }});
+
                 Html.RenderPartial("Discounts",
                     new ViewDataDictionary {
                         { "Discounts", ViewBag.Discounts }});
