--- a/Web/AltechWebSite/Content/core.css
+++ b/Web/AltechWebSite/Content/core.css
@@ -757,11 +757,16 @@ pre code {
 }
 
 .navigation-container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 0;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 0;
+    position: relative;
+    background: url('/Images/divbg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto;
 }
 
 .container {
@@ -4522,8 +4527,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
-  border-color: #080808;
+    background-color: #eee;
+    border-color: #080808;
 }
 
 .navbar-inverse .navbar-brand {
