--- a/Web/AltechWebSite/Views/Home/Contacts.cshtml
+++ b/Web/AltechWebSite/Views/Home/Contacts.cshtml
@@ -15,37 +15,43 @@
     }
 </script>
 
-<div id="contacts-address2">
-    <img id="attention-icon" src="~/Images/attention.png">
-    <address>
-        <strong>Калуга и Калужская область</strong>
-        <br />
-        <br />
-        С нами также можно связаться в этом регионе, детали по телефону:
-        <br />
-        <abbr title="Телефон">&#9742</abbr>&nbsp;+7&nbsp;910&nbsp;911-38-77
-    </address>
-</div>
-
-<div id="contacts-address">
-    <address>
+<div class="row">
+    <div class="col-sm-12 col-md-4">
         <strong>Оптово-строительный рынок в Митино</strong>
         <br />
         Москва,&nbsp;1-й Митинский переулок, д. 15
         <br />
-        <abbr title="Телефон">&#9742</abbr>&nbsp;+7&nbsp;910&nbsp;911-38-77
+        <abbr title="Телефон">&#9742</abbr>&nbsp;+7(910)911-38-77&nbsp;Алексей
         <br />
         <abbr title="Эл. почта">@@</abbr>&nbsp;<a href="mailto:alextechnologies@gmail.com">AlexTechnologies@gmail.com</a>
-    </address>
-    <p>
-        Рынок работает только по <b>вторникам</b> с 20:00 до 02:00. Если планируете приехать в другой день предварительно позвоните.
-    </p>
-    <h3>Схема проезда</h3>
-    <p>
-        <a href="https://yandex.ru/maps/-/CBFlvIVZHA">
-            «Митинский оптово-строительный рынок» на Яндекс.Картах
-            <br />
-            <img src="~/Images/Map/map2.jpg" alt="Схема проезда" />
-        </a>
-    </p>
+    </div>
+    <div class="col-sm-12 col-md-4">
+        <strong>Смоленск и Брянская область</strong>
+        <br />
+        <span>С нами также можно связаться в этом регионе</span>
+        <br />
+        <abbr title="Телефон">&#9742</abbr>&nbsp;+7(905)163-34-82&nbsp;Андрей
+    </div>
+    <div class="col-sm-12 col-md-4">
+        <strong>Калуга и Калужская область</strong>
+        <br />
+        <span>С нами также можно связаться в этом регионе</span>
+        <br />
+        <abbr title="Телефон">&#9742</abbr>&nbsp;+7(910)911-38-77&nbsp;Алексей
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-12">
+        <p>
+            Рынок работает только по <b>вторникам</b> с 20:00 до 02:00. Если планируете приехать в другой день предварительно позвоните.
+        </p>
+        <h3>Схема проезда</h3>
+        <p>
+            <a href="https://yandex.ru/maps/-/CBFlvIVZHA">
+                «Митинский оптово-строительный рынок» на Яндекс.Картах
+                <br />
+                <img src="~/Images/Map/map2.jpg" alt="Схема проезда" />
+            </a>
+        </p>
+    </div>
 </div>
