--- a/Web/AltechWebSite/Views/Shared/_Layout.cshtml
+++ b/Web/AltechWebSite/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="keywords" content="хозтовары,мебельная фурнитура,дверная фурнитура,оконная фурнитура,замки,личинки,ручной инструмент,хомуты,шпингалеты,петли" />
     <meta name="author" content="АЛТЕХ Хозтовары" />
     <title>@ViewBag.Title - АЛТЕХ Хозтовары</title>
-    @Styles.Render("~/Content/css?150920191541")
+    @Styles.Render("~/Content/css?260920190850")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -24,9 +24,9 @@
             @Html.ActionLink("АЛТЕХ Хозтовары", "Main", "Catalog", null, null)
         </div>
         <div class="navbar-contacts">
-            <abbr title="Телефон">&#9743</abbr>&nbsp;+7&nbsp;910&nbsp;911-38-77
+            <abbr title="Телефон">&#9743</abbr>&nbsp;+7 (910) 911-38-77&nbsp;Алексей (Москва, Калуга)
             <br />
-            <abbr title="Эл. почта">@@</abbr>&nbsp;AlexTechnologies@gmail.com
+            <abbr title="Телефон">&#9742</abbr>&nbsp;+7 (905) 163-34-82&nbsp;Андрей (Смоленск, Брянск)
         </div>
         <div class="navbar-links">
             <span><a href="/Catalog/Main">Каталог</a> </span>
