Introduced new column - PackMin at database and UI. Web site updated to display only Normal Price and Whole Sale Price. Price list also update - Whole Sale 3 price column hided.

--- a/Web/AltechWebSite/Views/Order/Main.cshtml
+++ b/Web/AltechWebSite/Views/Order/Main.cshtml
@@ -175,6 +175,7 @@
                             { "MerchandiseId", item.MerchandiseId },
                             { "Title", item.Title },
                             { "Pack", item.Pack },
+                            { "PackMin", item.PackMin },
                             { "UnitMeasure", item.UnitMeasure },
                             { "CostWhs1", costWhs1.Substring(0, costWhs1.Length - 1) },
                             { "CostWhs2", costWhs2.Substring(0, costWhs2.Length - 1) },
