--- a/Web/AltechWebSite/Views/Order/Main.cshtml
+++ b/Web/AltechWebSite/Views/Order/Main.cshtml
@@ -155,6 +155,7 @@
                         MerchandiseId = m.ID,
                         Title = m.Title,
                         Pack = m.Pack,
+                        PackMin = m.PackMin,
                         UnitMeasure = m.UnitMeasure,
                         CostWhs1 = m.CostWhs1,
                         CostWhs2 = m.CostWhs2,
