Contact details updated

--- a/Web/AltechWebSite/Views/Home/Contacts.cshtml
+++ b/Web/AltechWebSite/Views/Home/Contacts.cshtml
@@ -16,7 +16,7 @@
 </script>
 
 <div class="row">
-    <div class="col-sm-12 col-md-4">
+    <div class="col-sm-12 col-md-6">
         <strong>Оптово-строительный рынок в Митино</strong>
         <br />
         Москва,&nbsp;1-й Митинский переулок, д. 15
@@ -25,21 +25,16 @@
         <br />
         <abbr title="Эл. почта">@@</abbr>&nbsp;<a href="mailto:alextechnologies@gmail.com">AlexTechnologies@gmail.com</a>
     </div>
-    <div class="col-sm-12 col-md-4">
-        <strong>Смоленск и Брянская область</strong>
-        <br />
-        <span>С нами также можно связаться в этом регионе</span>
-        <br />
-        <abbr title="Телефон">&#9742</abbr>&nbsp;+7(905)163-34-82&nbsp;Андрей
-    </div>
-    <div class="col-sm-12 col-md-4">
+    <div class="col-sm-12 col-md-6">
         <strong>Калуга и Калужская область</strong>
         <br />
         <span>С нами также можно связаться в этом регионе</span>
         <br />
-        <abbr title="Телефон">&#9742</abbr>&nbsp;+7(910)911-38-77&nbsp;Алексей
+        <abbr title="Телефон">&#9742</abbr>&nbsp;+7(906)640-50-36&nbsp;Максим
+        <abbr title="Эл. почта">@@</abbr>&nbsp;<a href="mailto:forsag-kaluga@yandex.ru">forsag-kaluga@yandex.ru</a>
     </div>
 </div>
+<br />
 <div class="row">
     <div class="col-sm-12">
         <p>
