--- a/Web/AltechWebSite/Views/Shared/_Layout.cshtml
+++ b/Web/AltechWebSite/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
         <div class="navbar-contacts">
             <abbr title="Телефон">&#9743</abbr>&nbsp;+7 (910) 911-38-77&nbsp;Алексей (Москва, Калуга)
             <br />
-            <abbr title="Телефон">&#9742</abbr>&nbsp;+7 (905) 163-34-82&nbsp;Андрей (Смоленск, Брянск)
+            <abbr title="Телефон">&#9742</abbr>&nbsp;+7 (906) 640-50-36&nbsp;Максим (Калуга)
         </div>
         <div class="navbar-links">
             <span><a href="/Catalog/Main">Каталог</a> </span>
@@ -43,7 +43,7 @@
             <span>@Html.ActionLink("О нас", "About", "Home")</span>
         </div>
     </div>
-    
+
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -51,7 +51,7 @@
             <p>&copy; @DateTime.Now.Year - АЛТЕХ Хозтовары</p>
         </footer>
     </div>
-    
+
     <!-- Yandex.Metrika counter -->
     <noscript>
         <div>
