Changing discounts and price display information.

--- a/Web/AltechWebSite/Views/Shared/MerchandiseItem.cshtml
+++ b/Web/AltechWebSite/Views/Shared/MerchandiseItem.cshtml
@@ -18,7 +18,7 @@
             <br />
             Упаковка:&nbsp;@ViewBag.Pack<span>/</span>@ViewBag.PackMin&nbsp;@ViewBag.UnitMeasure
             <br />
-            <u>Цена:</u>&nbsp;@ViewBag.CostWhs1<span class="rouble">e</span>&nbsp;|&nbsp;<u>Опт:</u>&nbsp;@ViewBag.CostWhs2<span class="rouble">e</span>
+            <u>Опт 1:</u>&nbsp;@ViewBag.CostWhs1<span class="rouble">e</span>&nbsp;|&nbsp;<u>Опт 2:</u>&nbsp;@ViewBag.CostWhs2<span class="rouble">e</span>
             @*&nbsp;|&nbsp;<u>Опт3:</u>&nbsp;@ViewBag.CostWhs3<span class="rouble">e</span>*@
             <br />
             <input type="hidden" id="merchandise-id" name="merchandiseId" value="@ViewBag.MerchandiseId" />
